# Survey-cutter-post

./: .gitignore  .replit  .replitignore  patch_survey_wizard.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.nix
.agents/: agent_assets_metadata.toml
artifacts/survey-insight-engine/: README.md  _gen_bcn.py  _gen_prompt2_2_bcn.py  _gen_prompt2_2_sample.py  _gen_prompt2_3_bcn.py  _gen_prompt2_3_sample.py  _gen_prompt2_4_bcn.py  _gen_prompt2_4_sample.py  _gen_prompt2_5_bcn.py  _gen_prompt2_5_sample.py  _gen_prompt2_6_bcn.py  _gen_prompt2_6_sample.py  _gen_v9.py  advanced_segmentation_ui.py  app.py  app.py.bak  app.py.bak_pills  app.py.bak_round_final  assistant_faq.json  config.py  diagnose_q1_labels.py  io_diag.py  pyproject.toml  requirements.txt  verify_5s5t.py
artifacts/survey-insight-engine/.replit-artifact/: artifact.toml
artifacts/survey-insight-engine/.streamlit/: config.toml
artifacts/survey-insight-engine/docs/: PRD.md  TOOL_STRUCTURE.md
artifacts/survey-insight-engine/scripts/: realign_python_lock.py  verify_python_lock.py
artifacts/survey-insight-engine/src/: advanced_segmentation_ui.py.bak  ai_insights.py  ai_insights.py.bak_chatjson  bain_palette.py  chart_recommender.py  chart_renderer.py  chat_panel.py  chat_panel.py.bak  chat_panel.py.bak_8  cross_cut_engine.py  cross_cut_suggestions.py  datamap_parser.py  excel_exporter.py  excel_exporter.py.bak  filtered_single_cut.py  global_filter.py  hypothesis_validator.py  io.py  models.py  outcome_segmentation.py  product_tour.py.bak_8  product_tour.py.bak_arrows  product_tour.py.bak_gated  product_tour.py.bak_persist  question_classifier.py  raw_decoder.py  raw_decoder.py.bak  survey_type_detector.py  ui_constants.py  winner_scoring.py  word_survey_parser.py
artifacts/survey-insight-engine/src/adapters/: grid_rated_double_colon.py  registry.py  six_column_combined.py
artifacts/survey-insight-engine/src/single_cut/: _conditional.py  _grid.py  _multi_select.py  _numeric.py  engine.py  grid_binary_pivot.py
artifacts/survey-insight-engine/tests/: conftest.py  test_ai_insights.py  test_app_embed_checkbox.py  test_app_manual_cohort_ui.py  test_calc_primitives.py  test_chart_type_override.py  test_cross_cut_engine.py  test_datamap_parser_numeric_coercion_setup.py  test_excel_exporter.py  test_excel_exporter_grid_rated_formulas.py  test_excel_exporter_hypothesis_sheet.py  test_excel_exporter_input_embed.py  test_excel_exporter_manual_cohort.py  test_excel_exporter_rank_order_formulas.py  test_excel_exporter_winners_vs_laggards.py  test_filtered_single_cut.py  test_global_filter.py  test_grid.py  test_grid_binary_pivot.py  test_io.py  test_manual_cohort_upload.py  test_multi_select.py  test_numeric.py  test_outcome_segmentation_laggard_extensions.py  test_question_classifier.py  test_raw_decoder.py  test_respondent_id_detection.py  test_single_cut_engine.py  test_subcolumn_label_pattern.py  test_survey_type_detector.py  test_thinkcell_table_formatter.py  test_ui_wizard_outcome_laggard.py  test_winner_scoring.py  test_wizard_app_ui.py  test_wizard_diagnostic_panel.py
artifacts/survey-insight-engine/tests/fixtures/: combined_survey_fixture.xlsx  cross_cut_30_respondents.csv  excel_exporter_long_labels_test_no_double_underscore_data_names_01b64cdd24bb4085a2b67cc2b67ebab3.xlsx  excel_exporter_long_labels_test_no_double_underscore_data_names_0932a60890fa4fe08910e1960efeced4.xlsx  (+20758 more)
attached_assets/: Datamap_sample_1777761227920.xlsx  (+658 more)
(+2403 files in other folders)
