[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Survey Insight Engine workspace Python dependencies"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.39.0",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scipy==1.17.1",
    "plotly==6.7.0",
    "openpyxl==3.1.5",
    "xlsxwriter==3.2.0",
    "pillow==10.4.0",
    "python-dateutil==2.9.0",
    "python-docx==1.2.0",
    "openai==2.41.0",
    "psutil==7.2.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
]

[tool.uv]
# The production publish runs a bare `uv sync` against UV_PROJECT_ENVIRONMENT.
# On Replit that var defaults to `.pythonlibs`, a NON-venv whose bin/python
# symlinks into the READ-ONLY nix store, so `uv sync` tries to install there and
# fails with "Permission denied (os error 13)". The actual fix lives in `.replit`
# ([userenv.shared] UV_PROJECT_ENVIRONMENT=/home/runner/workspace/.venv): it
# points the sync at a writable virtualenv that uv creates during the build.
# `default-groups = []` is a secondary refinement — it keeps the dev group
# (pytest/iniconfig/pluggy) out of the production venv. Dev tooling
# (verify/realign scripts) passes `--all-groups` explicitly so the local
# `.pythonlibs` still tracks the full lock, including pytest.
default-groups = []
